@@ -51,6 +51,7 @@ scontrol [<OPTION>] [<COMMAND>]
      holdu <job_list>         place user hold on specified job (see hold)
      hide                     do not display information about hidden
 			      partitions
+     listjobs		      List jobs on node where scontrol is run.
      listpids <job_id<.step>> List pids associated with the given jobid, or
 			      all jobs if no id is given (This will only
 			      display the processes on the node which the
